# Hippocrates

./: .gitattributes  .gitignore  AGENTS.md  PROJECT_SUMMARY.md  README.md  build_engine.sh  bundle_app.sh
hippocrates_engine/: Cargo.toml  build_for_xcode.sh  example.hipp
hippocrates_engine/examples/: 01_simple_reminders.hipp  02_pain_tracker.hipp  03_fever_monitor.hipp  04_data_sufficiency.hipp  99_bottles_v2.hipp  cli_simulation.hipp  cli_simulation_answers.json  examples.hipp  implant_care.hipp  implant_care_answers.json  injury_intake.hipp  treating_copd.hipp  treating_copd_answers.json  treating_copd_answers_adherent.json  treating_copd_answers_adherent_delays.json  treating_copd_answers_sporadic.json  treating_copd_answers_sporadic_delays.json
hippocrates_engine/include/: hippocrates_engine.h
hippocrates_engine/plans/: 99_bottles.hipp  99_bottles_v2.hipp  implicit_ask_scenario.hipp  missing_unit_def.hipp  syntax_error.hipp  treating_copd.hipp  validation_assignment.hipp  validation_dataflow.hipp  validation_error.hipp
hippocrates_engine/specs/: 00-stakeholder-requirements.md  01-system-requirements.md  02-system-design.md  03-detailed-design.md  04-traceability.md  README.md  spec.html
hippocrates_engine/src/: ast.rs  domain.rs  ffi.rs  formatter.rs  grammar.pest  lib.rs  main.rs  parser.rs  parser.rs.temp_cond
hippocrates_engine/tests/: addressee_definition_test.rs  analysis_context_test.rs  context_test.rs  copd_execution_test.rs  custom_units_test.rs  drug_definition_test.rs  event_trigger_test.rs  ffi.rs  fixture_loader.rs  formatter.rs  golden.hipp  (+31 more)
(+87 files in other folders)
