[package]
name = "hippocrates_engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
libc = "0.2.180"
pest = "2.8.5"
pest_derive = "2.8.5"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
